# Sidereal

./: Cargo.toml  README.md
gui/: Cargo.toml
gui/src/: app.rs  main.rs
gui/src/styles/: button_style.rs  container_style.rs  mod.rs  picklist_style.rs  tab_style.rs  text_input_style.rs
gui/src/tabs/: guide.rs  mod.rs  plate_solve.rs  setup.rs
launcher/: Cargo.toml
launcher/src/: main.rs
overpass_planner/: Cargo.toml
overpass_planner/src/: lib.rs  planning.rs  tle.rs
planetarium/: Cargo.toml  build.rs
planetarium/src/: camera.rs  client.rs  colors.rs  events.rs  main.rs  menu.rs  scene.rs  server.rs  star_catalog.rs  star_fisheye.wgsl  star_fisheye_material.rs  starfield.rs  target.rs
planetarium/src/menu/: mod.rs  satellite_window.rs
planetarium/src/ui/: mod.rs  satellite_window.rs
planetarium/src/ui/widgets/: content_container.rs  mod.rs  planetarium_button.rs  planetarium_buttons.rs  planetarium_text_input.rs
protos/: Cargo.toml  build.rs
protos/protos/: gui.proto  planetarium.proto
protos/src/: lib.rs
sidereal_gui/: Cargo.toml  build.rs
sidereal_gui/src/: lib.rs
sidereal_gui/src/app/: mod.rs
sidereal_gui/src/config/: mod.rs
sidereal_gui/src/gui/: camera_display.rs  mod.rs
sidereal_gui/src/gui/dialogs/: add_server.rs  dialog.rs  error.rs  mod.rs
sidereal_gui/src/gui/styles/: button_style.rs  container_style.rs  mod.rs  picklist_style.rs  tab_style.rs  text_input_style.rs
sidereal_gui/src/gui/tabs/: capture.rs  focus.rs  mod.rs  mount.rs  observatory.rs  setup.rs  telescope.rs
sidereal_gui/src/gui/widgets/: allsky.rs  dial.rs  dialog.rs  indicator.rs  live_plot.rs  mod.rs  mount_steer_button.rs  server_status.rs  video.rs
sidereal_gui/src/indi_handler/: camera.rs  focuser.rs  mod.rs  mount.rs  roof_controller.rs  telescope_controller.rs
sidereal_gui/src/model/: indi_server_handler.rs  mod.rs  planetarium_handler.rs  tracking_manager.rs
sidereal_gui/src/planetarium_handler/: mod.rs  planetarium_receiver.rs
