[package]
edition = "2021"
name = "planetarium"
resolver = "2"
version = "0.1.0"

[dependencies]
bevy = {version = "0.16", features = ["bevy_asset", "bevy_render"]} 
bevy_rich_text3d = "0.4.1" 
byteorder = "1.4" 
chrono = "0.4.41" 
meshtext = "0.3.1" # ← for runtime 3D text mesh generation
protos = {path = "../protos"} 
rand = "0.8" 
tokio = {version = "1", features = ["full"]} 
tonic = {version = "0.14.0", features = ["transport"]} 
uuid = {version = "1.3", features = ["v4"]}
