[package]
edition = "2021"
name = "planetarium"
resolver = "2"
version = "0.1.0"

[dependencies]
bevy = {version = "0.17.3", features = ["bevy_asset", "bevy_render"]} 
bevy_egui = "0.38" 
bevy_rich_text3d = "0.5.0" 
byteorder = "1.4" 
chrono = "0.4.41" 
meshtext = "0.3.1" # ← for runtime 3D text mesh generation
overpass_planner = {path = "../overpass_planner"}
prost-types = "0.14.0" 
protos = {path = "../protos"} 
rand = "0.8" 
tokio = {version = "1", features = ["full"]} 
tonic = {version = "0.14.0", features = ["transport"]} 
uuid = {version = "1.3", features = ["v4"]}
