[package]
edition = "2021"
name = "sidereal_gui"
resolver = "2"
version = "0.1.0"

[dependencies]
dirs-next = "2.0"
iced = {version = "0.13.1", features = ["tokio", "image", "canvas"]}# or latest; choose backend you want
iced_dialog = "0.13.0"
indi = "5.0.1"
once_cell = "1.21.3"
protos = {path = "../protos"}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0.12"
tokio = {version = "1.47.1", features = ["sync", "macros"]}
tonic = "0.14.0"
