[package]
edition = "2021"
name = "sidereal_gui"
resolver = "2"
version = "0.1.0"

[dependencies]
base64 = "0.22"
bytes = "1.6"
dirs-next = "2.0"
gstreamer = "0.24.1"
gstreamer-app = {version = "0.24.0", features = ["v1_16"]}
gstreamer-video = "0.24.1"
iced = {version = "0.13.1", features = ["tokio", "image", "canvas", "advanced"]}# or latest; choose backend you want
iced_aw = "0.12.2"
iced_dialog = "0.13.0"
image = {version = "0.25", default-features = false, features = ["jpeg", "png"]}
indi = "5.0.1"
once_cell = "1.21.3"
protos = {path = "../protos"}
reqwest = {version = "0.12", default-features = false, features = ["blocking", "rustls-tls"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0.12"
tokio = {version = "1.47.1", features = ["sync", "macros"]}
tonic = "0.14.0"
